--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 
     
        <h3>How many quarters have you attended EvCC?</h3>
-        <p>answer</p>
+        <p>I believe 4 quarters.</p>
        <h3>What degree/certificate program are you pursuing</h3>
-        <p>answer</p>
+        <p>I'm in the ATA Graphic Design program. </p>
        <h3>Why did you choose this degree/certificate?</h3>
-        <p>answer</p>
+        <p>I wanted to get a base knowledge for design to be able to jump into any other related field.</p>
        <h3>What artist/designer inspires you? Why?</h3>
-        <p>answer</p>
+        <p>Honestly I don't have an artist or designer that inspires me right now. I have enough ideas in my head that the part keeping me from creating them is my own skills.</p>
        <h3>What is your favorite color? (Please, use a hex code and style your answer with that color.)</h3>
-       <p>answer</p>
+       <p>I really like ADFF2F, a yellowed green color that I painted my car. It's a very similar color to the one as the background to this main section. </p>
     </main>
 </body>
 </html>
