--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 <body>
     <header>
         <h1>Graph 130 Spring 2024</h1>
+        <nav>
+            <ul>
+                <li><a href="./pages/theater2.html">Theater</a></li>
+                <li><a href="./pages/cascade.html">Cascades</a></li>
+                <li><a href="./pages/history-refractor.html">History</a></li>
+            </ul>
+        </nav>
         <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to</p>
 
     </header>
