--- a/pages/cascade.html
+++ b/pages/cascade.html
@@ -5,15 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cascade Mountains</title>
     <link href="../styles/cascade.css" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Protest+Revolution&family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">   
+
+
 </head>
 <body>
-        <article>
+        <article class="container">
             <header> 
                  <h1>The Cascade Mountain Range</h1>
                 <h2>Hiking and Camping Resources</h2>
                 <nav>
                     <ul>
-                        <li><a href="*">Home</a></li>
+                        <li><a href="../index.html">Home</a></li>
                         <li><a href="*">Trails</a></li>
                         <li><a href="*">Camping</a></li>
                         <li><a href="*">Maps</a></li>
@@ -21,14 +28,17 @@
                     </ul>
                 </nav>
             </header>
-        <section>
+        <section class="content">
  
     <p>The Cascade Range (or Cascades) is a major mountain range of western North America, extending from southern British Columbiathrough Washington and Oregon to Northern California. It includes both non-volcanic mountains, such as the North Cascades, and the notable volcanoes known as the High Cascades. The small part of the range in British Columbia is referred to as the Canadian Cascades or, locally, as the Cascade Mountains. The latter term is also sometimes used by Washington residents to refer to the Washington section of the Cascades in addition to North Cascades, the more usual U.S. term, as in North Cascades National Park. The highest peak in the range is Mount Rainier in Washington at 14,411 feet (4,392 m).</p>
     <p>The Cascades are part of the Pacific Ocean's Ring of Fire, the ring of volcanoes and associated mountains around the Pacific Ocean. All of the eruptions in the contiguous United States over the last 200 years have been from Cascade volcanoes. The two most recent wereLassen Peak from 1914 to 1921 and a major eruption of Mount St. Helens in 1980. Minor eruptions of Mount St. Helens have also occurred since, most recently in 2005.[1]</p>
 
 <h3>Geography </h3>
     <p>The Cascades extend northward from Lassen Peak (also known as Mount Lassen) in northern California to the confluence of the Nicola and Thompson rivers in British Columbia. The Fraser River separates the Cascades from the Coast Mountains.[2] The highest volcanoes of the Cascades, known as the High Cascades,[3]dominate their surroundings, often standing twice the height of the nearby mountains. They often have a visual height (height above nearby crestlines) of one mile or more. The highest peaks, such as the 14,411-foot (4,392 m) Mount Rainier, dominate their surroundings for 50 to 100 miles (80 to 161 km).</p>
-
+            <figure class="image-left">
+                    <img src="../images/page2.jpg" alt="mountain lake"> 
+                    <figcaption>Mountain Lake</figcaption>
+            </figure>
     <p>The northern part of the range, north of Mount Rainier, is known as the North Cascades in the United States but is formally named the Cascade Mountains north of the Canada – United States border, reaching to the northern extremity of the Cascades at Lytton Mountain.[4] Overall, the North Cascades and Canadian Cascades are extremely rugged; even the lesser peaks are steep and glaciated, and valleys are quite low relative to peaks and ridges, so there is great local relief.[5] The southern part of the Canadian Cascades, particularly the Skagit Range, is geologically and topographically similar to the North Cascades, while the northern and northeastern parts are less glaciated and more plateau-like, resembling nearby areas of the Thompson Plateau.</p>
 
     <p>Because of the range's proximity to the Pacific Ocean and the region's prevailing westerly winds, precipitation is substantial, especially on the western slopes due to orographic lift, with annual snow accumulations of up to 1,000 inches (25,000 mm) in some areas. For example, Mount Baker in Washington recorded a world-record single-season snowfall in the winter of 1998–99 with 1,140 inches (29,000 mm).[6] Prior to that year, Mount Rainier held the world record for snow accumulation at Paradise in 1978. It is not uncommon for some places in the Cascades to have over 500 inches (13,000 mm) of annual snow accumulation, such as at Lake Helen, near Lassen Peak.[7] Most of the High Cascades are therefore white with snow and ice year-round. The western slopes are densely covered with Douglas-fir (Pseudotsuga menziesii), western hemlock (Tsuga heterophylla) and red alder (Alnus rubra),[8] while the drier eastern slopes feature mostly ponderosa pine (Pinus ponderosa), with some western larch (Larix occidentalis), and subalpine fir (Tsuga mertensiana) and alpine larch (Larix lyallii) at higher elevations.[9] Annual rainfall is as low as 9 inches (230 mm) on the eastern foothills due to a rain shadow effect.[10]</p>
@@ -39,7 +49,10 @@
 
 <h3>History</h3>
     <p>In early 1792 British navigator George Vancouver explored Puget Sound and gave English names to the high mountains he saw. Mount Baker was named for Vancouver's third lieutenant, Joseph Baker, although the first European to see it was Manuel Quimper, who named it "La gran Montaña del Carmelo" in 1790.[14] Mount Rainier was named after Admiral Peter Rainier. Later in 1792 Vancouver had his lieutenant William Robert Broughtonexplore the lower Columbia River. He named Mount Hood after Lord Samuel Hood, an admiral of the Royal Navy. Mount St. Helens was sighted by Vancouver in May 1792, from near the mouth of the Columbia River. It was named for Alleyne FitzHerbert, 1st Baron St Helens, a British diplomat.[15]Vancouver's expedition did not, however, name the mountain range which contained these peaks. He referred to it simply as the "eastern snowy range". Earlier Spanish explorers called it sierra nevadas, meaning "snowy mountains".[14]</p>
-
+            <figure class="image-right">
+                    <img src="../images/page3.jpg" alt="sunset over the cascades">
+                    <figcaption>Sunset over the Cascades</figcaption>
+            </figure>
     <p>In 1805 the Lewis and Clark Expedition passed through the Cascades on the Columbia River, which for many years was the only practical way to pass that part of the range. They were the first non-indigenous people to see Mount Adams, but they thought it was Mount St. Helens. When they later saw Mount St. Helens they thought it was Mount Rainier.[16] On their return trip Lewis and Clark spotted a high but distant snowy pinnacle that they named for the sponsor of the expedition, U.S. President Thomas Jefferson.[17] Lewis and Clark called the Cascade Range the "Western Mountains".[18]</p>
 
     <p>The Lewis and Clark expedition, and the many settlers and traders that followed, met their last obstacle to their journey at the Cascades Rapids in the Columbia River Gorge, a feature on the river now submerged beneath the Bonneville Reservoir. Before long, the great white-capped mountains that loomed above the rapids were called the "mountains by the cascades" and later simply as the "Cascades". The earliest attested use of the name "Cascade Range" is in the writings of botanist David Douglas.[19]</p>
@@ -59,17 +72,17 @@
 
     <p>In addition, the Applegate Trail was created to allow settlers to avoid rafting down the Columbia River. The Applegate Trail used the path of the California Trailto north-central Nevada. From there, the Applegate Trail headed northwest into northern California, and continued northwest towards today's Ashland, Oregon. From there, settlers would head north along the established Siskiyou Trail into the Willamette Valley.</p>
 
-    <p>With the exception of the 1915 eruption of remote Lassen Peak in Northern California, the range was quiet for more than a century. Then, on May 18, 1980, the dramatic eruption of little-known Mount St. Helens shattered the quiet and brought the world's attention to the range. Geologists were also concerned that the St. Helens eruption was a sign that long-dormant Cascade volcanoes might become active once more, as in the period from 1800 to 1857 when a total of eight erupted. None have erupted since St. Helens, but precautions are being taken nevertheless, such as the Mount Rainier Volcano Lahar Warning System in Pierce County, Washington.[24]</p>
+    <p>With the exception of the 1915 eruption of remote Lassen Peak in Northern California, the range was quiet for more than a century. Then, on May 18, 1980, the dramatic eruption of little-known Mount St. Helens shattered the quiet and brought the world's attention to the range. Geologists were also concerned that the St. Helens eruption was a sign that long-dormant Cascade volcanoes might become active once more, as in the period from 1800 to 1857 when a total of eight erupted. None have erupted since St. Helens, but precautions are being taken nevertheless, such as the Mount Rainier Volcano Lahar Warning System in Pierce County, Washington.[24] </p>
 </section>
-<aside>
+<aside class="sidebar">
 <h3>Ecology</h3> 
-    <p>There is a wide range of flora and fauna inhabiting the Cascade Range. The ecology of the area can be understood by following a west-to-east line. As the line passes through the Cascade Range, it crosses a number of ecoregions, first getting higher and colder, then getting warmer, yet drier.[28] Most of the Cascades' lower and middle elevations are covered in coniferous forest; the higher altitudes have extensive meadows as well as alpine tundraand glaciers. Common trees include Western hemlock (Tsuga heterophylla) and Douglas fir (Pseudotsuga menziesii). The southern part of the Cascades are within the California Floristic Province, an area of high biodiversity.</p>
+    <p>There is a wide range of flora and fauna inhabiting the Cascade Range. The ecology of the area can be understood by following a west-to-east line. As the line passes through the Cascade Range, it crosses a number of ecoregions, first getting higher and colder, then getting warmer, yet drier.[28] Most of the Cascades' lower and middle elevations are covered in coniferous forest; the higher altitudes have extensive meadows as well as alpine tundraand glaciers. Common trees include Western hemlock (Tsuga heterophylla) and Douglas fir (Pseudotsuga menziesii). The southern part of the Cascades are within the California Floristic Province, an area of high biodiversity. <a href="A">Read more...</a></p>
 
 <h3>Geology</h3>
-    <p>The Cascades contain active volcanoes, including Mount St. Helens, and several dormant volcanoes including Mount Rainier and Mount Baker. Thetectonics of the region has been extensively studied to help describe the extent of the shifting and volcanic problems.</p>
+    <p>The Cascades contain active volcanoes, including Mount St. Helens, and several dormant volcanoes including Mount Rainier and Mount Baker. Thetectonics of the region has been extensively studied to help describe the extent of the shifting and volcanic problems. <a href="d">Read more...</a></p>
 
 <h3>Human Uses and Legends </h3>
-    <p>Soil conditions for farming are generally good, especially downwind of volcanoes. This is largely because volcanic rocks are often rich in potassiumbearing minerals such as orthoclase and decay easily. Volcanic debris, especially lahars, also have a leveling effect and the storage of water in the form of snow and ice is also important. These snow-capped mountains such as Mt. Hood and Mt. Bachelor are used as ski resorts in the late winter. Much of that water eventually flows into reservoirs, where it is used for recreation before its potential energy is captured to generate hydroelectric power before being used to irrigate crops.</p>
+    <p>Soil conditions for farming are generally good, especially downwind of volcanoes. This is largely because volcanic rocks are often rich in potassiumbearing minerals such as orthoclase and decay easily. Volcanic debris, especially lahars, also have a leveling effect and the storage of water in the form of snow and ice is also important. These snow-capped mountains such as Mt. Hood and Mt. Bachelor are used as ski resorts in the late winter. Much of that water eventually flows into reservoirs, where it is used for recreation before its potential energy is captured to generate hydroelectric power before being used to irrigate crops. <a href="A">Read more...</a></p>
 </aside>
 <footer>
     <p>Content taken from wikipedia (http://en.wikipedia.org/wiki/Cascade_Range)
