--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a class="pure-u-1-7" href="index.html">Home</a>
             <a class="pure-u-1-7" href="pages/history-refactor.html">History</a>
             <a class="pure-u-1-7" href="pages/theater2.html">Theater</a>
-            <a class="pure-u-1-7" href="pages/stew recipe.html recipe.html">Stew</a>
+            <a class="pure-u-1-7" href="pages/stew recipe.html">Stew</a>
             <a class="pure-u-1-7" href="pages/cascade.html">Cascades</a>
             <a class="pure-u-1-7" href="pages/optimizing-image.html">Images</a>
             <a class="pure-u-1-7" href="pages/media-queries.html">Media Queries</a>
