--- a/pages/cascade.html
+++ b/pages/cascade.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cascade Mountains</title>
-    <link href="../styles/cascade.css" rel="stylesheet" type="text/css">
+    <!-- <link href="../styles/cascade.css" rel="stylesheet" type="text/css"> -->
+    <link href="../styles/small.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -85,7 +86,7 @@
     <p>Soil conditions for farming are generally good, especially downwind of volcanoes. This is largely because volcanic rocks are often rich in potassiumbearing minerals such as orthoclase and decay easily. Volcanic debris, especially lahars, also have a leveling effect and the storage of water in the form of snow and ice is also important. These snow-capped mountains such as Mt. Hood and Mt. Bachelor are used as ski resorts in the late winter. Much of that water eventually flows into reservoirs, where it is used for recreation before its potential energy is captured to generate hydroelectric power before being used to irrigate crops. <a href="A">Read more...</a></p>
 </aside>
 <footer>
-    <p>Content taken from wikipedia (http://en.wikipedia.org/wiki/Cascade_Range)
+    <p>Content taken from <a href="http://en.wikipedia.org/wiki/Cascade_Range" target="_blank">Wikipedia</a> 
 my name Gavin Whitbeck 2024. Everett Community College Graph 130 web coding project. </p>
 </footer>
 </article>
