--- a/pages/cascade.html
+++ b/pages/cascade.html
@@ -6,6 +6,8 @@
     <title>Cascade Mountains</title>
     <!-- <link href="../styles/cascade.css" rel="stylesheet" type="text/css"> -->
     <link href="../styles/small.css" rel="stylesheet">
+    <link href="../styles/medium.css" rel="stylesheet" media="screen and (min-width:641px)">
+    <link href="../styles/large.css" rel="stylesheet" media="screen and (min-width:1024px)">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
