--- a/pages/lopez.html
+++ b/pages/lopez.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orcas island</title>
+    <title>Lopez Island</title>
     <link href="../styles/islands.css" rel="stylesheet">
+    <link href="../styles/lopez.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -20,9 +21,9 @@
                         <button type="submit">Search</button>
                     </form>
             </search>
-                <div class="hero-orcas">
-            <h1>Orcas island</h1>
-        </div>
+            <div class="hero-lopez">
+                 <h1>Lopez Island</h1>
+            </div>
     </header>
         <nav>
             <ul>
@@ -31,26 +32,28 @@
                 <a href="lopez.html"><li>LOPEZ ISLAND</li></a>
             </ul>
         </nav>
-        <main>
+    <main>
         <section class="item1">large image</section>
-        <section class="item2"> <div class="island-text">
-            <h2>Lodging</h2>
-            <p>Looking for activities on Orcas Island? Find everything from whale and wildlife tours to kayak expeditions and more!</p>
+        <section class="item2"> 
+            <div class="island-text">
+                <h2>Lodging</h2>
+                <p>Looking for activities on Orcas Island? Find everything from whale and wildlife tours to kayak expeditions and more!</p>
             </div>
             <div class="pic2"></div>
         </section>
         <section class="item3">medium image</section>
-        <section class="item4"> <div class="island-text">
-            <h2>Dining</h2>
-            <p>Looking for activities on Orcas Island? Find everything from whale and wildlife tours to kayak expeditions and more!</p>
+        <section class="item4"> 
+            <div class="island-text">
+                <h2>Dining</h2>
+                <p>Looking for activities on Orcas Island? Find everything from whale and wildlife tours to kayak expeditions and more!</p>
             </div>
             <div class="pic4"></div>
         </section>
         <section class="item5">medium image</section>
         <section class="item6">
             <div class="island-text">
-            <h2>Activities</h2>
-            <p>Looking for activities on Orcas Island? Find everything from whale and wildlife tours to kayak expeditions and more!</p>
+                <h2>Activities</h2>
+                <p>Looking for activities on Orcas Island? Find everything from whale and wildlife tours to kayak expeditions and more!</p>
             </div>
             <div class="pic6"></div>
         </section>
