--- a/pages/media-queries.html
+++ b/pages/media-queries.html
@@ -6,8 +6,10 @@
     <title>Responsive Colors</title>
     <link href="../styles/beyond.css" rel="stylesheet">
     <link href="../styles/2000.css" rel="stylesheet">
+   
     <link href="../styles/1281.css" rel="stylesheet" media="screen and (min-width:962px) and (max-width:1281px)">
-        <style>
+    <link href="../styles/mobile-nav.css"  rel="stylesheet">
+    <style>
             @media screen and (max-width:961px) {
                     body {
                         background-color: blue;
@@ -55,6 +57,32 @@
 
 </head>
 <body>
+    <nav class="navbar">
+        <div class="page-title">
+           <p> Graph 130 - Spring 2024</p>
+        </div>
+        <a href="#" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
+        <div class="navbar-links">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="history-refactor.html">History</a></li>
+                <li><a href="theater2.html">Theater Bill</a></li>
+                <li><a href="stew recipe.html">Stew Recipe</a></li>
+                <li><a href="cascade.html">Cascades</a></li>
+                <li><a href="optimizing-image.html">Optimizing Images</a></li>
+                <li><a href="media-queries.html">Media Queries</a></li>
+                <li><a href="orcas.html">Orcas</a></li>
+                <li><a href="lopez.html">Lopez</a></li>
+                <li><a href="fluid.html">Fluid</a></li>
+                <li><a href="grids.html">Grids</a></li>
+                
+            </ul>
+        </div>
+    </nav>
     <h1>Mobile Responsive Design</h1>
     <nav>
     <a href="../index.html">Home</a>
