--- a/pages/optimizing-image.html
+++ b/pages/optimizing-image.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&family=Protest+Guerrilla&display=swap" rel="stylesheet">
+<link href="../styles/mobile-nav.css"  rel="stylesheet">
     <style>
         .loki {
             background-color: orange;
@@ -49,15 +50,41 @@
 
 </head>
 <body>
+    <nav class="navbar">
+        <div class="page-title">
+           <p> Graph 130 - Spring 2024</p>
+        </div>
+        <a href="#" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
+        <div class="navbar-links">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="history-refactor.html">History</a></li>
+                <li><a href="theater2.html">Theater Bill</a></li>
+                <li><a href="stew recipe.html">Stew Recipe</a></li>
+                <li><a href="cascade.html">Cascades</a></li>
+                <li><a href="optimizing-image.html">Optimizing Images</a></li>
+                <li><a href="media-queries.html">Media Queries</a></li>
+                <li><a href="orcas.html">Orcas</a></li>
+                <li><a href="lopez.html">Lopez</a></li>
+                <li><a href="fluid.html">Fluid</a></li>
+                <li><a href="grids.html">Grids</a></li>
+                
+            </ul>
+        </div>
+    </nav>
     <header>
-        <nav class="pure-g">
+        <!-- <nav class="pure-g">
             <a class="pure-u-1-7" href="../index.html">Home</a>
             <a class="pure-u-1-7" href="history-refactor.html">History</a>
             <a class="pure-u-1-7" href="theater2.html">Theater</a>
             <a class="pure-u-1-7" href="stew recipe.html">Stew</a>
             <a class="pure-u-1-7" href="cascade.html">Cascades</a>
             <a class="pure-u-1-7" href="optimizing-image.html">Images</a>
-        </nav>
+        </nav> -->
     </header>
 
         <h1>Optimizing Images</h1>
