--- a/pages/stew recipe.html
+++ b/pages/stew recipe.html
@@ -1,16 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="../styles/stew.css" rel="stylesheet" type="text/css">
+   
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stew Recipe probably</title>
-    <style>
-        i {color:brown;}
-       .stew-content {width:560px;}
-    </style>
+       <link href="../styles/stew.css" rel="stylesheet">
+       <link href="../styles/mobile.css" rel="stylesheet">
+       <link href="../styles/mobile-nav.css"  rel="stylesheet">
+       <title>Stew Recipe probably</title>
+    
+      <!-- <style>
+        /* i {color:brown;}
+       .stew-content {width:560px;} */
+    </style> -->
+  
 </head>
 <body>
+    <nav class="navbar">
+        <div class="page-title">
+           <p> Graph 130 - Spring 2024</p>
+        </div>
+        <a href="#" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
+        <div class="navbar-links">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="history-refactor.html">History</a></li>
+                <li><a href="theater2.html">Theater Bill</a></li>
+                <li><a href="stew recipe.html">Stew Recipe</a></li>
+                <li><a href="cascade.html">Cascades</a></li>
+                <li><a href="optimizing-image.html">Optimizing Images</a></li>
+                <li><a href="media-queries.html">Media Queries</a></li>
+                <li><a href="orcas.html">Orcas</a></li>
+                <li><a href="lopez.html">Lopez</a></li>
+                <li><a href="fluid.html">Fluid</a></li>
+                <li><a href="grids.html">Grids</a></li>
+                
+            </ul>
+        </div>
+    </nav>
     <div class="stew-content">
 
     <h1 style="color:darkorange;font-size:26px;"> How To Make the Best Beef Stew from Scratch</h1>
