--- a/index.html
+++ b/index.html
@@ -6,8 +6,35 @@
     <title>Graph 130</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
     <link href="styles/index.css" rel="stylesheet" type="text/css">
+    <link href="styles/mobile-nav.css"  rel="stylesheet">
 </head>
 <body>
+    <nav class="navbar">
+        <div class="page-title">
+           <p> Graph 130 - Spring 2024</p>
+        </div>
+        <a href="#" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
+        <div class="navbar-links">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="pages/history-refactor.html">History</a></li>
+                <li><a href="pages/theater2.html">Theater Bill</a></li>
+                <li><a href="pages/stew recipe.html">Stew Recipe</a></li>
+                <li><a href="pages/cascade.html">Cascades</a></li>
+                <li><a href="pages/optimizing-image.html">Optimizing Images</a></li>
+                <li><a href="pages/media-queries.html">Media Queries</a></li>
+                <li><a href="pages/orcas.html">Orcas</a></li>
+                <li><a href="pages/lopez.html">Lopez</a></li>
+                <li><a href="pages/fluid.html">Fluid</a></li>
+                <li><a href="pages/grids.html">Grids</a></li>
+                
+            </ul>
+        </div>
+    </nav>
     <header>
         <h1>Graph 130 Spring 2024</h1>
         <nav class="pure-g">
