--- a/pages/cascade.html
+++ b/pages/cascade.html
@@ -13,10 +13,36 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Protest+Revolution&family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">   
-
+    <link href="../styles/mobile-nav.css"  rel="stylesheet">
 
 </head>
 <body>
+    <nav class="navbar">
+        <div class="page-title">
+           <p> Graph 130 - Spring 2024</p>
+        </div>
+        <a href="#" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
+        <div class="navbar-links">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="history-refactor.html">History</a></li>
+                <li><a href="theater2.html">Theater Bill</a></li>
+                <li><a href="stew recipe.html">Stew Recipe</a></li>
+                <li><a href="cascade.html">Cascades</a></li>
+                <li><a href="optimizing-image.html">Optimizing Images</a></li>
+                <li><a href="media-queries.html">Media Queries</a></li>
+                <li><a href="orcas.html">Orcas</a></li>
+                <li><a href="lopez.html">Lopez</a></li>
+                <li><a href="fluid.html">Fluid</a></li>
+                <li><a href="grids.html">Grids</a></li>
+                
+            </ul>
+        </div>
+    </nav>
         <article class="container">
             <header> 
                  <h1>The Cascade Mountain Range</h1>
