--- a/pages/fluid.html
+++ b/pages/fluid.html
@@ -6,8 +6,36 @@
     <title>Fluid Dimensions</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/fluid.css">
+    <link href="../styles/mobile.css" rel="stylesheet">
+    <link href="../styles/mobile-nav.css"  rel="stylesheet">
 </head>
-<body>
+<body class="fluid">
+    <nav class="navbar">
+        <div class="page-title">
+           <p> Graph 130 - Spring 2024</p>
+        </div>
+        <a href="#" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
+        <div class="navbar-links">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="history-refactor.html">History</a></li>
+                <li><a href="theater2.html">Theater Bill</a></li>
+                <li><a href="stew recipe.html">Stew Recipe</a></li>
+                <li><a href="cascade.html">Cascades</a></li>
+                <li><a href="optimizing-image.html">Optimizing Images</a></li>
+                <li><a href="media-queries.html">Media Queries</a></li>
+                <li><a href="orcas.html">Orcas</a></li>
+                <li><a href="lopez.html">Lopez</a></li>
+                <li><a href="fluid.html">Fluid</a></li>
+                <li><a href="grids.html">Grids</a></li>
+                
+            </ul>
+        </div>
+    </nav>
     <header>
         <nav class="pure-g">
             <a class="pure-u-1-7" href="../index.html">Home</a>
@@ -23,7 +51,7 @@
         <article class="pure-g hero">
             <section class="pure-u-2-3 ">
                 <h1>Fluid Dimensions</h1>
-                <p>So far we have been building our web pages with fixed dimensions. Our sizes have been determined by pixels. That was the old way of building websites when screen sizes were more uniform. Modern websites are viewed on a variety of screen sizes and we want our content to begin to fit to the window it is being viewed in. We will begin to utilize percentages, em, and rem to make our site fluid. To be a proper fluid web site the content should be adjusting and flowing according to the viewport between media breaks. </p>
+                <p>So far we have been building our webwith fixed dimensions. Our sizes have been determined by pixels. That was the old way of building websites when screen sizes were more uniform. Modern websites are viewed on a variety of screen sizes and we want our content to begin to fit to the window it is being viewed in. We will begin to utilize percentages, em, and rem to make our site fluid. To be a proper fluid web site the content should be adjusting and flowing according to the viewport between media breaks. </p>
             </section>
             <section class="pure-u-1-3">
             <img src="../images/bruce-lee.jpg" alt="Bruce Lee">
