--- a/pages/history-refactor.html
+++ b/pages/history-refactor.html
@@ -7,15 +7,44 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
     <link href="../styles/history.css" rel="stylesheet" type="text/css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="../styles/mobile.css" rel="stylesheet">
+    <link href="../styles/mobile-nav.css" rel="stylesheet">
 </head>
-<body>
-    <nav class="pure-g sample">
+<body class="history">
+    <nav class="navbar">
+        <div class="page-title">
+           <p> Graph 130 - Spring 2024</p>
+        </div>
+        <a href="#" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
+        <div class="navbar-links">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="history-refactor.html">History</a></li>
+                <li><a href="theater2.html">Theater Bill</a></li>
+                <li><a href="stew recipe.html">Stew Recipe</a></li>
+                <li><a href="cascade.html">Cascades</a></li>
+                <li><a href="optimizing-image.html">Optimizing Images</a></li>
+                <li><a href="media-queries.html">Media Queries</a></li>
+                <li><a href="orcas.html">Orcas</a></li>
+                <li><a href="lopez.html">Lopez</a></li>
+                <li><a href="fluid.html">Fluid</a></li>
+                <li><a href="grids.html">Grids</a></li>
+                
+            </ul>
+        </div>
+    </nav>
+   
+    <!-- <nav class="pure-g sample">
         <div class="pure-u-1-5"><a href="../index.html">Home</a></div>
         <div class="pure-u-1-5"><a href="history-refactor.html">History</a></div>
         <div class="pure-u-1-5"><a href="theater2.html">Theater</a></div>
         <div class="pure-u-1-5"><a href="stew recipe.html">Stew</a></div>
         <div class="pure-u-1-5"><a href="cascade.html">Cascades</a></div>
-    </nav>
+    </nav> -->
     <main class="pure-g">
     <section class="pure-u-1-3">
           <p><b>Dwight Eisenhower</b> - American politician and Army general who served as the 34th President of the United States from 1953 until 1961.</p>
