--- a/pages/orcas.html
+++ b/pages/orcas.html
@@ -8,8 +8,36 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="../styles/mobile.css" rel="stylesheet">
+    <link href="../styles/mobile-nav.css"  rel="stylesheet">
 </head>
 <body>
+    <nav class="navbar">
+        <div class="page-title">
+           <p> Graph 130 - Spring 2024</p>
+        </div>
+        <a href="#" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
+        <div class="navbar-links">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="history-refactor.html">History</a></li>
+                <li><a href="theater2.html">Theater Bill</a></li>
+                <li><a href="stew recipe.html">Stew Recipe</a></li>
+                <li><a href="cascade.html">Cascades</a></li>
+                <li><a href="optimizing-image.html">Optimizing Images</a></li>
+                <li><a href="media-queries.html">Media Queries</a></li>
+                <li><a href="orcas.html">Orcas</a></li>
+                <li><a href="lopez.html">Lopez</a></li>
+                <li><a href="fluid.html">Fluid</a></li>
+                <li><a href="grids.html">Grids</a></li>
+                
+            </ul>
+        </div>
+    </nav>
     <header>
             <p><a href="../index.html" target="_blank">Go To Home</a></p>
             <img src="../images/SJIVB-1.png" alt="SJIVB" class="logo1">
@@ -24,7 +52,7 @@
             <h1>Orcas island</h1>
         </div>
     </header>
-        <nav>
+        <nav class="island">
             <ul>
                 <a href="orcas.html"><li>ORCAS ISLAND</li></a>
                 <a href="sanjuan.html"><li>SAN JUAN ISLAND</li></a>
