--- a/pages/media-queries.html
+++ b/pages/media-queries.html
@@ -68,7 +68,7 @@
         </a>
         <div class="navbar-links">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="history-refactor.html">History</a></li>
                 <li><a href="theater2.html">Theater Bill</a></li>
                 <li><a href="stew recipe.html">Stew Recipe</a></li>
