--- a/pages/camaro.html
+++ b/pages/camaro.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Moul&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
     <link href="../styles/camaro.css" rel="stylesheet">
 </head>
 <body>
@@ -35,8 +36,39 @@
             <p class="central">Central to the growth mindset is the idea that failures and difficulties are not indicators of a person's limitations, but rather opportunities for learning and improvement. Instead of viewing setbacks as discouraging roadblocks, individuals with a growth mindset see them as stepping stones on the path to mastery. This outlook fosters resilience and tenacity, enabling individuals to persevere in the face of obstacles.            </p>
             <p class="embracing">Embracing challenges is a cornerstone of the growth mindset. Rather than shying away from difficult tasks, individuals actively seek them out, recognizing that they provide the greatest potential for growth. They approach challenges with a sense of curiosity and a willingness to stretch their abilities, knowing that even if they don't immediately succeed, they are still expanding their skills and knowledge.            </p>
         </div>
-
-
+        <div class="one">
+            <div class="background"></div>
+            <h2>02</h2>
+            <h3 class="how">What You Need</h3>
+        </div>
+        <div class="pure-g boxing">
+            <div class="pure-u-1-3"><img src="../images/hard work wheel.png"> </div>
+            <div class="pure-u-1-3"><img src="../images/dedication wheel.png"> </div>
+            <div class="pure-u-1-3"><img src="../images/DP wheel.png"> </div>
+        </div>
+        <div class="pure-g boxing">
+            <div class="pure-u-1-3"><h3 class="titles">Hard Work</h3></div>
+            <div class="pure-u-1-3"><h3 class="titles">Dedication</h3> </div>
+            <div class="pure-u-1-3"><h3 class="titles">Deliberate Practice</h3></div>
+        </div>
+        <div class="pure-g boxing">
+            <div class="pure-u-1-3"><p class="boxes"> This mindset rejects the notion of innate talent as the primary determinant of success, instead attributing achievement to a combination of effort and strategy.</p></div>
+            <div class="pure-u-1-3"><p class="boxes">Growth mindset empowers individuals who take ownership in their craft, pushing forward and dedicating themselves to it.</p></div>
+            <div class="pure-u-1-3"><p class="boxes">Effort is highly valued in growth mindset, therefore it must be put into action in order for one to get the most from this mindset.</p></div>
+        </div>
+        <div class="one">
+            <div class="background"></div>
+            <h2>03</h2>
+            <h3 class="how">Grow With Others</h3>
+        </div>
+        <div class="chunk">
+            <p class="feedback">Feedback is welcomed and appreciated in a growth mindset. Constructive criticism is seen as an invaluable source of information for refining skills and knowledge. It's not taken personally, but rather as a means to accelerate growth and development.            </p>
+            <p class="individuals"> Individuals with a growth mindset are inspired by the success of others. They see others' achievements not as threats, but as evidence of what is possible with dedication and hard work. They are eager to learn from and collaborate with those who have excelled in their field.
+            </p>
+        </div>
+        <div class="final">
+            <p class="essence">In essence, the growth mindset is a powerful philosophy that unlocks human potential. By embracing challenges, valuing effort, seeking feedback, and celebrating the success of others, individuals can cultivate a mindset that propels them toward continuous learning, improvement, and ultimately, their highest levels of achievement. <img src="../images/Camaro side.png">           </p>
+        </div>
 
 
 
