--- a/pages/camaro.html
+++ b/pages/camaro.html
@@ -52,9 +52,9 @@
             <div class="pure-u-1-3"><h3 class="titles">Deliberate Practice</h3></div>
         </div>
         <div class="pure-g boxing">
-            <div class="pure-u-1-3"><p class="boxes"> This mindset rejects the notion of innate talent as the primary determinant of success, instead attributing achievement to a combination of effort and strategy.</p></div>
-            <div class="pure-u-1-3"><p class="boxes">Growth mindset empowers individuals who take ownership in their craft, pushing forward and dedicating themselves to it.</p></div>
-            <div class="pure-u-1-3"><p class="boxes">Effort is highly valued in growth mindset, therefore it must be put into action in order for one to get the most from this mindset.</p></div>
+            <div class="pure-u-1-3 test"><p class="boxes"> This mindset rejects the notion of innate talent as the primary determinant of success, instead attributing achievement to a combination of effort and strategy.</p></div>
+            <div class="pure-u-1-3 test "><p class="boxes">Growth mindset empowers individuals who take ownership in their craft, pushing forward and dedicating themselves to it.</p></div>
+            <div class="pure-u-1-3 test"><p class="boxes">Effort is highly valued in growth mindset, therefore it must be put into action in order for one to get the most from this mindset.</p></div>
         </div>
         <div class="one">
             <div class="background"></div>
