--- a/pages/camaro.html
+++ b/pages/camaro.html
@@ -16,9 +16,9 @@
             <h1>Growth Mindset</h1>
         </header>
         <nav>
-            <a href="#">How It Works</a>
-            <a href="#">What You Need</a>
-            <a href="#">Grow With Others</a>
+            <a href="#" data-target="how">How It Works</a>
+            <a href="#" data-target="what">What You Need</a>
+            <a href="#" data-target="grow">Grow With Others</a>
         </nav>
     <main>
         <div class="first">
@@ -27,7 +27,7 @@
         <div>
             <p>A growth mindset is a transformative approach to learning and development that empowers individuals to embrace challenges, persist through setbacks, and ultimately achieve higher levels of success. Rooted in the belief that abilities and intelligence can be developed through dedication and hard work, it contrasts with a fixed mindset, which assumes that abilities are innate and unchangeable.            </p>
         </div>
-        <div class="one">
+        <div class="one" id="how">
             <div class="background"></div>
             <h2>01</h2>
             <h3 class="how">How It Works</h3>
@@ -36,7 +36,7 @@
             <p class="central">Central to the growth mindset is the idea that failures and difficulties are not indicators of a person's limitations, but rather opportunities for learning and improvement. Instead of viewing setbacks as discouraging roadblocks, individuals with a growth mindset see them as stepping stones on the path to mastery. This outlook fosters resilience and tenacity, enabling individuals to persevere in the face of obstacles.            </p>
             <p class="embracing">Embracing challenges is a cornerstone of the growth mindset. Rather than shying away from difficult tasks, individuals actively seek them out, recognizing that they provide the greatest potential for growth. They approach challenges with a sense of curiosity and a willingness to stretch their abilities, knowing that even if they don't immediately succeed, they are still expanding their skills and knowledge.            </p>
         </div>
-        <div class="one">
+        <div class="one" id="what">
             <div class="background"></div>
             <h2>02</h2>
             <h3 class="how">What You Need</h3>
@@ -56,7 +56,7 @@
             <div class="pure-u-1-3 test "><p class="boxes">Growth mindset empowers individuals who take ownership in their craft, pushing forward and dedicating themselves to it.</p></div>
             <div class="pure-u-1-3 test"><p class="boxes">Effort is highly valued in growth mindset, therefore it must be put into action in order for one to get the most from this mindset.</p></div>
         </div>
-        <div class="one">
+        <div class="one"  id="grow">
             <div class="background"></div>
             <h2>03</h2>
             <h3 class="how">Grow With Others</h3>
