holy moly am i done

--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
                 <li><a href="pages/lopez.html">Lopez</a></li>
                 <li><a href="pages/fluid.html">Fluid</a></li>
                 <li><a href="pages/grids.html">Grids</a></li>
+                <li><a href="pages/camaro.html">Final</a></li>
+
                 
             </ul>
         </div>
     </nav>
     <header>
         <h1>Graph 130 Spring 2024</h1>
-        <nav class="pure-g">
+        <!-- <nav class="pure-g">
             <a class="pure-u-1-7" href="index.html">Home</a>
             <a class="pure-u-1-7" href="pages/history-refactor.html">History</a>
             <a class="pure-u-1-7" href="pages/theater2.html">Theater</a>
@@ -48,7 +50,7 @@
             <a class="pure-u-1-7" href="pages/orcas.html">Orcas Island</a>
             <a class="pure-u-1-7" href="pages/grids.html">960 Grid</a>
             
-        </nav>
+        </nav> -->
         <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to</p>
 
     </header>
@@ -67,6 +69,8 @@
         <p>Honestly I don't have an artist or designer that inspires me right now. I have enough ideas in my head that the part keeping me from creating them is my own skills.</p>
        <h3>What is your favorite color? (Please, use a hex code and style your answer with that color.)</h3>
        <p>I really like ADFF2F, a yellowed green color that I painted my car. It's a very similar color to the one as the background to this main section. </p>
+   
     </main>
+    <script src="scripts/mobile-nav.js"></script>
 </body>
 </html>
