--- a/pages/grids.html
+++ b/pages/grids.html
@@ -8,7 +8,7 @@
     <link href="../styles/mobile-nav.css"  rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar">
+    <!-- <nav class="navbar">
         <div class="page-title">
            <p> Graph 130 - Spring 2024</p>
         </div>
@@ -33,7 +33,7 @@
                 
             </ul>
         </div>
-    </nav>
+    </nav> -->
     <section id="content">
         <div class="container">
          <section id="grid" class="clearfix">
