--- a/pages/stew recipe.html
+++ b/pages/stew recipe.html
@@ -125,6 +125,6 @@
         <p>Gavin Whitbeck - Everett Community College - Educational Purposes</p>
     </footer>
     </div>
-
+    <script src="scripts/mobile-nav.js"></script>
 </body>
 </html>
