--- a/pages/theater2.html
+++ b/pages/theater2.html
@@ -12,7 +12,7 @@
     <link href="../styles/mobile-nav.css"  rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar">
+    <!-- <nav class="navbar">
         <div class="page-title">
            <p> Graph 130 - Spring 2024</p>
         </div>
@@ -37,7 +37,7 @@
                 
             </ul>
         </div>
-    </nav>
+    </nav> -->
     <header>
         <img src="../images/theater-logo.png" width="100px" height="auto">
         <nav>
