--- a/pages/cascade.html
+++ b/pages/cascade.html
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-    <nav class="navbar">
+    <!-- <nav class="navbar">
         <div class="page-title">
            <p> Graph 130 - Spring 2024</p>
         </div>
@@ -42,7 +42,7 @@
                 
             </ul>
         </div>
-    </nav>
+    </nav> -->
         <article class="container">
             <header> 
                  <h1>The Cascade Mountain Range</h1>
