--- a/pages/orcas.html
+++ b/pages/orcas.html
@@ -12,7 +12,7 @@
     <link href="../styles/mobile-nav.css"  rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar">
+    <!-- <nav class="navbar">
         <div class="page-title">
            <p> Graph 130 - Spring 2024</p>
         </div>
@@ -37,7 +37,7 @@
                 
             </ul>
         </div>
-    </nav>
+    </nav> -->
     <header>
             <p><a href="../index.html" target="_blank">Go To Home</a></p>
             <img src="../images/SJIVB-1.png" alt="SJIVB" class="logo1">
